# lio-mapping

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  package.xml
config/: anymal_basement.yaml  anymal_config.yaml  anymal_sewer.yaml  anymal_sub1.yaml  bpearl_top.yaml  indoor_test_config.yaml  maplab.yaml  maplab_baseline.yaml  outdoor_test_config.yaml  outdoor_test_config_64.yaml
docker/: 1.Dockerfile  Dockerfile  build_docker.sh  run_docker.sh
include/factor/: GravityLocalParameterization.h  ImuFactor.h  ImuGravityFactor.h  MarginalizationFactor.h  PivotPointPlaneFactor.h  PlaneProjectionFactor.h  PlaneToPlaneFactor.h  PointDistanceFactor.h  PoseLocalParameterization.h  PriorFactor.h
include/feature_manager/: FeatureManager.h
include/imu_processor/: Estimator.h  ImuInitializer.h  ImuInitializerStatic.h  ImuInitializer_viorb.h  IntegrationBase.h  MeasurementManager.h
include/map_builder/: MapBuilder.h
include/point_processor/: PointMapping.h  PointOdometry.h  PointProcessor.h  point_types.h
include/utils/: CircularBuffer.h  LoadVirtual.h  TicToc.h  Twist.h  YamlLoader.h  common_ros.h  geometry_utils.h  math_utils.h
include/visualizer/: Visualizer.h
launch/: 16_scans_test.launch  64_scans_test.launch  anymal_baseline.launch  anymal_baseline_basement.launch  anymal_baseline_sub1.launch  anymal_odom.launch  anymal_odom_basement.launch  anymal_odom_sewer.launch  anymal_odom_sub1.launch  bpearl_odom.launch  map_4D.launch  map_4D_indoor.launch  maplab.launch  maplab_baseline.launch  rs32_scans_test.launch  test_indoor.launch  test_indoor_rs32.launch  test_outdoor.launch  test_outdoor_64.launch
msg/: OdometryWithImuBiases.msg
rviz_cfg/: lio_baseline.rviz  lio_indoor_test.rviz  lio_map_builder.rviz  lio_map_builder_indoor.rviz  lio_map_builder_indoor_without_mapping.rviz  lio_outdoor_test.rviz  lio_test.rviz
scripts/: debug_plot.sh  transform_monitor.py
src/: estimator_node.cc  input_filters_node.cc  map_builder_node.cc  mapping_node.cc  odometry_node.cc  processor_node.cc  save_bag_to_pcd.cc
src/factor/: GravityLocalParameterization.cc  MarginalizationFactor.cc  PivotPointPlaneFactor.cc  PlaneProjectionFactor.cc  PlaneToPlaneFactor.cc  PointDistanceFactor.cc  PoseLocalParameterization.cc  PriorFactor.cc
src/feature_manager/: FeatureManager.cc
src/imu_processor/: Estimator.cc  ImuInitializer.cc  ImuInitializerStatic.cc  ImuInitializer_visorb.cc  MeasurementManager.cc
src/map_builder/: MapBuilder.cc
src/point_processor/: PointMapping.cc  PointOdometry.cc  PointProcessor.cc
src/visualizer/: Visualizer.cc
test/: test_rotations.cc  test_visualizaer.cc
test/data/: imu_pose_vel.txt  imu_pose_vel_noise.txt
test/test_imu_processor/: test_circular_buffer.cc  test_imu_factor.cc  test_measurement_manager.cc
test/test_point_processor/: test_point_mapping.cc  test_point_odometry.cc  test_point_processor.cc
utils/: CMakeLists.txt  YamlLoader.cc
